--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express-validator": "^7.2.0",
+    "form-data": "^4.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
